--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,3 +5,53 @@ PALETA DE CORES
 Verde: #49a09d
 Roxo: #5f2c82
 */
+
+/*Configurações CSS tela phone*/
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;/*borda faz parte da margem*/
+}
+
+body,html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    /*para centralização do section#login, main precisa ser relative*/
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    /*para centralização, section#login precisa ser absolute*/
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    /*Tudo o que sair da section, é escondido. Resolve o problema das bordas pontudas, o que também poderia ser feito usando o border-radius no section#login > div#imagem*/
+    overflow:hidden;
+    
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.566);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/fundo-pattern.jpg);
+    background-size: cover;
+    background-position: center center;
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+}
