--- a/estilo/style.css
+++ b/estilo/style.css
@@ -42,6 +42,9 @@ section#login{
     height: 500px;
     border-radius: 15px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.566);
+    /*Efeito para atrasar a transição de largura e altura*/
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;/*suavidade da transação*/
 }
 
 section#login > div#imagem{
