--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -18,6 +18,7 @@ Telas grandes: acima de 1200
     
     section#login{
         width: 80vw;
+        height: 310px;
     }
 
     section#login > div#imagem{
@@ -37,10 +38,14 @@ Telas grandes: acima de 1200
 
     form > input[type=submit]{
         max-width: 50%;
+        margin: auto;
+        margin-top: 15px;
     }
 
     form > a.botao{
         max-width: 50%;
+        margin: auto;
+        margin-top: 8px;
     }
 }
 
@@ -53,6 +58,7 @@ Telas grandes: acima de 1200
 
     section#login{
         width: 900px;
+        height: 310px;
     }
 
     section#login > div#imagem{
@@ -67,14 +73,18 @@ Telas grandes: acima de 1200
     }
 
     div#formulario > p{
-        font-size: 1.1em;
+        font-size: 1em;
     }
 
     form > input[type=submit]{
         max-width: 50%;
+        margin: auto;
+        margin-top: 15px;
     }
 
     form > a.botao{
         max-width: 50%;
+        margin: auto;
+        margin-top: 8px;
     }
 }
